--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: obi1kenobi/cargo-semver-checks-action@v2
         with:
+          package: tonic-rest-core
+        continue-on-error: true
+      - uses: obi1kenobi/cargo-semver-checks-action@v2
+        with:
           package: tonic-rest-build
         continue-on-error: true
       - uses: obi1kenobi/cargo-semver-checks-action@v2
