--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Verify version matches tag
         run: |
           TAG=${GITHUB_REF#refs/tags/v}
-          for crate in crates/tonic-rest-build crates/tonic-rest crates/tonic-rest-openapi; do
+          for crate in crates/tonic-rest-core crates/tonic-rest-build crates/tonic-rest crates/tonic-rest-openapi; do
             VERSION=$(cargo metadata --no-deps --format-version 1 | jq -r ".packages[] | select(.manifest_path | endswith(\"$crate/Cargo.toml\")) | .version")
             if [ "$VERSION" != "$TAG" ]; then
               echo "::error::Version mismatch in $crate: Cargo.toml=$VERSION, tag=$TAG"
@@ -31,11 +31,20 @@ jobs:
 
       - name: Dry run
         run: |
+          cargo publish --dry-run -p tonic-rest-core
           cargo publish --dry-run -p tonic-rest-build
           cargo publish --dry-run -p tonic-rest
           cargo publish --dry-run -p tonic-rest-openapi
 
       # Publish in dependency order with index propagation delay
+      - name: Publish tonic-rest-core
+        run: cargo publish -p tonic-rest-core
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+
+      - name: Wait for index
+        run: sleep 30
+
       - name: Publish tonic-rest-build
         run: cargo publish -p tonic-rest-build
         env:
