--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ exclude = [".github", "bacon.toml", "deny.toml"]
 version = "0.1.2"
 edition = "2021"
 rust-version = "1.82"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/zs-dima/tonic-rest"
 homepage = "https://github.com/zs-dima/tonic-rest"
 
@@ -36,7 +36,7 @@ tokio = { version = "1", features = ["macros", "rt"] }
 # Serialization
 serde = "1"
 serde_json = "1"
-serde_yaml_ng = "0.10"
+serde_yaml_ng = "0.10" # TODO : switch to serde_yaml
 
 # Error handling
 thiserror = "2.0"
@@ -44,7 +44,7 @@ anyhow = "1.0"
 
 # CLI
 clap = { version = "4.5", features = ["derive"] }
-toml = "0.9"
+toml = "1.0"
 
 # Date/time
 chrono = { version = "0.4", default-features = false, features = ["std"] }
