--- a/deny.toml
+++ b/deny.toml
@@ -1,18 +1,8 @@
 [advisories]
-db-path = "~/.cargo/advisory-db"
-db-urls = ["https://github.com/rustsec/advisory-db"]
-vulnerability = "deny"
-unmaintained = "warn"
-notice = "warn"
 ignore = []
 
 [licenses]
-unlicensed = "deny"
-# We aggressively allow OSI-approved permissive licenses
-allow = ["MIT", "Apache-2.0", "Apache-2.0 WITH LLVM-exception", "BSD-3-Clause", "BSD-2-Clause", "ISC", "CC0-1.0", "Unicode-DFS-2016"]
-deny = ["GPL-1.0", "GPL-2.0", "GPL-3.0", "AGPL-1.0", "AGPL-3.0"]
-copyleft = "deny"
-allow-osi-fsf-free = "either"
+allow = ["MIT", "Apache-2.0", "Apache-2.0 WITH LLVM-exception", "BSD-2-Clause", "BSD-3-Clause", "ISC", "CC0-1.0", "Unicode-3.0", "Unicode-DFS-2016", "Zlib"]
 confidence-threshold = 0.8
 
 [bans]
