--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = ["crates/*"]
-resolver = "2"
+resolver = "3"
 exclude = [".github", "bacon.toml", "deny.toml"]
 
 [workspace.package]
@@ -36,7 +36,7 @@ tokio = { version = "1", features = ["macros", "rt"] }
 # Serialization
 serde = "1"
 serde_json = "1"
-serde_yaml_ng = "0.10" # TODO : switch to serde_yaml
+serde_yaml_ng = "0.10"
 
 # Error handling
 thiserror = "2.0"
